Updates from ShareLaTeX

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,7 +2,7 @@ Booktitle = {Proceedings of Nineteenth National AAAI Conference on Artificial In
 Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligence},
 
 @inproceedings{Briel-et-al:AAAI04,
-	Author = {Briel, M. and Sanchez, R. and Do, M. and Kambhampati, S.},
+	Author = {Briel, M. and Sanchez, R. and Do, M.B. and Kambhampati, S.},
 	Booktitle = {Proceedings of the AAAI Nineteenth National Conference on Artificial Intelligence},
 	Optpublisher = {AAAI Press},
 	Title = {Effective Approaches for Partial Satisfaction (Over-Subscription) Planning},
@@ -16,13 +16,14 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 	Booktitle = {Proceedings of Fifth International Conference on Knowledge Based Computer Systems {(KBCS)}},
 	Title = {Partial Satisfaction (Over-Subscription) Planning as Heuristic Search},
 	Year = 2004,
-	pages={mancanti}}
+	}
+	pages={mancanti} # non le trovo
 
 
 @inproceedings{Weld:94AA,
 	Address = {Seattle, WA},
 	Author = {Weld, D. and Etzioni, O.},
-	Booktitle = {In Proceedings of the AAAI Twelfth National Conference on Artificial Intelligence},
+	Booktitle = {Proceedings of the AAAI Twelfth National Conference on Artificial Intelligence},
 	Pages = {1042-1047},
 	Title = {The First Law of Robotics (A Call to Arms)},
 	Year = 1994}
@@ -36,10 +37,29 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 	Volume = {22(1-2)},
 	Year = {1998}}
 
+booktitle={Proceedings of the Sixteenth European Conference on Artificial Intelligence (ECAI-04},
+@inproceedings{CC:ECAI04,
+  title={Compilation of {LTL} goal formulas into {PDDL}},
+  author={Cresswell, S. and Coddington, A.},
+  booktitle={Proceedings of the Sixteenth European Conference on Artificial Intelligence (ECAI)},
+  volume={16},
+  pages={985-986},
+  year={2004}
+}
+
+Proc. of the 14th European Conference on Artificial Intelligence (ECAI-00)
+@inproceedings{Rintanen:ECAI00,
+  title={Incorporation of temporal logic control into plan operators},
+  author={Rintanen, J.},
+  booktitle={Proceedings of the Fourteenth European Conference on Artificial Intelligence (ECAI)},
+  pages={526--530},
+  year={2000},
+}
+
 
 @inproceedings{smith04,
 	Author = {Smith, D.},
-	Booktitle = {In Proceedings of the Fourteenth International Conference on Automated Planning and Scheduling {(ICAPS)}},
+	Booktitle = {Proceedings of the Fourteenth International Conference on Automated Planning and Scheduling {(ICAPS)}},
 	Optpages = {393--401},
 	Title = {Choosing Objectives in Over-Subscription Planning},
 	Year = 2004}
@@ -57,7 +77,6 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 
 @article{Hplanp:aij09,
 	Author = {Baier, J. and Bacchus, F. and McIlraith, S.},
-	Date-Modified = {2015-03-05 18:29:40 +0000},
 	Journal = {Artificial Intelligence},
 	Pages = {593--618},
 	Title = {A Heuristic Search Approach to Planning with Temporally Extended Preferecens},
@@ -68,7 +87,7 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 @inproceedings{edelkamp2006compilation,
   title={On the Compilation of Plan Constraints and Preferences.},
   author={Edelkamp, S.},
-  booktitle={In Proceedings of the Sixteenth International Conference on Automated Planning and Scheduling (ICAPS)},
+  booktitle={Proceedings of the Sixteenth International Conference on Automated Planning and Scheduling (ICAPS)},
   pages={374--377},
   year={2006}
 }
@@ -77,7 +96,7 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 @inproceedings{edelkamp2006large,
   title={Large-scale optimal {PDDL3} planning with {MIPS-XXL}},
   author={Edelkamp, S. and Jabbar, S. and Naizih, M.},
-  journal={In Eighth International Planning Competition Booklet {(IPC 2006))}},
+  journal={Eighth International Planning Competition Booklet {(IPC 2006))}},
   pages={28--30},
   year={2006}
 }
@@ -104,13 +123,12 @@ author={Coles, Amanda Jane and Coles, Andrew},
 
 
 @article{kn:geffner09,
-	Author = {Emil Keyder and Hector Geffner},
+	Author = {Keyder E. and and Geffner, H.},
 	Journal = {Journal of Artificial Intelligence Research (JAIR)},
 	Pages = {547-556},
 	Title = {Soft Goals Can Be Compiled Away},
 	Volume = {36},
 	Year = {2009}}
-
 
 @inproceedings{percassi2017improving,
       title={Improving Plan Quality through Heuristics for Guiding and Pruning the Search: A Study Using {LAMA}},
@@ -122,8 +140,8 @@ author={Coles, Amanda Jane and Coles, Andrew},
 
 
 @inproceedings{coles2011lprpg,
-  title={LPRPG-P: Relaxed Plan Heuristics for Planning with Preferences.},
-  author={Coles, Amanda Jane and Coles, Andrew},
+  title={{LPRPG-P}: Relaxed Plan Heuristics for Planning with Preferences.},
+  author={Coles, A.~J. and Coles, A.},
   booktitle={Proceedings of the Twenty-First International Conference on Automated Planning and Scheduling (ICAPS)},
   year={2011},
   pages={26-33}
@@ -131,12 +149,12 @@ author={Coles, Amanda Jane and Coles, Andrew},
 
 
 @inproceedings{nebel2018,
-	Author = {Wright B., Mattmüller R. and Nebel B.},
+	Author = {Wright B. and Mattm\"{u}ller R. and Nebel B.},
 	Title = {Compiling Away Soft Trajectory Constraints in Planning.},
 	Year = {2018},
-	booktitle={In Proceedings of the Sixteenth Conference on Principles of Knowledge Representation and Reasoning (KR)},
+	booktitle={Proceedings of the Sixteenth Conference on Principles of Knowledge Representation and Reasoning (KR)},
 	pages={474-482}
-	}
+}
 
 	
 @article{RicLAMA,
@@ -153,7 +171,7 @@ author={Coles, Amanda Jane and Coles, Andrew},
 
 @inproceedings{MercuryIPC8,
 	Author = {Katz, M. and Hoffmann, J.},
-	Booktitle = {In Eighth International Planning Competition Booklet {(IPC 2014)}},
+	Booktitle = {Eighth International Planning Competition Booklet {(IPC 2014)}},
 	Title = {Mercury Planner: Pushing the Limits of Partial Delete Relaxation},
 	Year = {2014},
 	pages ={43-47}}
@@ -162,15 +180,15 @@ author={Coles, Amanda Jane and Coles, Andrew},
 @inproceedings{nunez2014miplan,
       title={{MIPlan} and {DPMPlan}},
       author={N{\'u}nez, S. and Borrajo, D. and Linares L{\'o}pez, C.},
-      Booktitle = {In Eighth International Planning Competition Booklet (IPC 2014)},
+      Booktitle = {Eighth International Planning Competition Booklet (IPC 2014)},
       pages={13--16},
       year={2014}
 }
 
 @inproceedings{cenamor2014ibacop,
-      title={{IB}A{C}O{P} and {IB}A{C}O{P} planner},
+      title={{IB}A{C}O{P} and {IB}A{C}O{P}2 planner},
       author={Cenamor, I. and De La Rosa, T. and Fern{\'a}ndez, F.},
-      Booktitle = {In Eighth International Planning Competition Booklet (IPC 2014)},
+      Booktitle = {Eighth International Planning Competition Booklet (IPC 2014)},
       pages={35--38},
       year={2014}
 }
@@ -191,11 +209,10 @@ author={Coles, Amanda Jane and Coles, Andrew},
   note = {Accessed: 2018-10-12}
 }
 
-
 @inproceedings{haslum2007domain,
   title={Domain-independent construction of pattern database heuristics for cost-optimal planning},
   author={Haslum, P. and Botea, A. and Helmert, M. and Bonet, B. and Koenig, S. and others},
   year={2007},
-  Booktitle={In Proceedings of the AAAI Twenty-second Conference on Artificial Intelligence, 
+  Booktitle={Proceedings of the AAAI Twenty-second Conference on Artificial Intelligence, 
   pages={1007–1012}
 }
