--- a/biblio.bib
+++ b/biblio.bib
@@ -20,6 +20,13 @@ Optpublisher = {AAAI Press},
 	pages={mancanti} # non le trovo
 
 
+@inproceedings{Rintanen:personal2015,
+        title = {Personal communication},
+        author = {Jussi Rintanen},
+        year = 2015
+}
+
+
 @inproceedings{Weld:94AA,
 	Address = {Seattle, WA},
 	Author = {Weld, D. and Etzioni, O.},
@@ -132,7 +139,7 @@ publisher = {{AAAI} Press},
 
 
 @article{kn:geffner09,
-	Author = {Keyder E. and and Geffner, H.},
+	Author = {Keyder, E. and Geffner, H.},
 	Journal = {Journal of Artificial Intelligence Research (JAIR)},
 	Pages = {547--556},
 	Title = {Soft Goals Can Be Compiled Away},
@@ -158,7 +165,7 @@ publisher = {{AAAI} Press},
 
 @inproceedings{fdremix,
   title={Fast Downward Remix},
-  author={Seipp, Jendrik},
+  author={Seipp, J.},
   booktitle={Ninth International Planning Competition Booklet {(IPC 2018)}},
   pages = {67--69},
   year=2018
@@ -170,7 +177,7 @@ In Ninth International Planning Competition (IPC 2018), Deterministic Part, pp. 
 
 @inproceedings{fdss2018,
   title={Fast Downward Stone Soup 2018},
-  author={Seipp, Jendrik},
+  author={Seipp, J. and R\"{o}ger, G.},
   booktitle={Ninth International Planning Competition Booklet {(IPC 2018)}},
   pages = {72--74},
   year=2018
@@ -187,18 +194,26 @@ In Ninth International Planning Competition (IPC 2018), Deterministic Part, pp. 
 
 
 @inproceedings{nebel2018,
-	Author = {Wright B. and Mattm\"{u}ller R. and Nebel B.},
+	Author = {Wright, B. and Mattm\"{u}ller, R. and Nebel, B.},
 	Title = {Compiling Away Soft Trajectory Constraints in Planning.},
 	Year = {2018},
 	booktitle={Proceedings of the Sixteenth Conference on Principles of Knowledge Representation and Reasoning (KR 2018)},
 	pages={474--482}
 }
 
+@article{helmert2006fast,
+  title={The fast downward planning system},
+  author={Helmert, M.},
+  journal={Journal of Artificial Intelligence Research (JAIR)},
+  volume={26},
+  pages={191--246},
+  year={2006}
+}
 
 
 @article{RicLAMA,
 	Author = {Richter, S. and Westphal, M.},
-	Journal = {Journal of Artificial Intelligence Research},
+	Journal = {Journal of Artificial Intelligence Research (JAIR)},
 	Number = {1},
   pages={127--177},
 	Publisher = {AI Access Foundation},
@@ -268,7 +283,7 @@ In Ninth International Planning Competition (IPC 2018), Deterministic Part, pp. 
 
 @article{nebel2000compilability,
   title={On the compilability and expressive power of propositional planning formalisms},
-  author={Nebel, Bernhard},
+  author={Nebel, B.},
   journal={Journal of Artificial Intelligence Research (JAIR)},
   volume={12},
   pages={271--315},
@@ -284,5 +299,11 @@ In Ninth International Planning Competition (IPC 2018), Deterministic Part, pp. 
 
 }
 
-
+@inproceedings{colesoptic,
+  author    = {Benton, J. and Coles, A.J. and Coles, A.},
+  title     = {Temporal Planning with Preferences and Time-Dependent Continuous Costs},
+  booktitle = {Proceedings of the Twenty-Second International Conference on Automated Planning and Scheduling, {(ICAPS 2012)}},
+  year      = {2012},
+  pages = {2--10}
+}
 
